# cpp23

./: CMakeLists.txt  README.md  conanfile.py
include/: cpp23.h
src/: cpp23.cpp
tests/unit/: Bitmap1_test.cpp  Bitmap2_test.cpp  CMakeLists.txt
